--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -109,6 +109,7 @@
     <string translatable="false" name="pref_debug">debug</string>
     <string translatable="false" name="pref_force_orientation_sensor">forceOrientationSensort</string>
     <string translatable="false" name="pref_old_mapsforge_api">pref_old_mapsforge_api</string>
+    <string translatable="false" name="pref_longTapCreateUDC">pref_longTapCreateUDC</string>
     <!-- preferences used internally -->
     <string translatable="false" name="pref_temp_twitter_token_secret">temp-token-secret</string>
     <string translatable="false" name="pref_temp_twitter_token_public">temp-token-public</string>
