Fix escaping in changelog

--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -9,7 +9,7 @@
     · Change: Use waypoints of a user defined cache in \"Go to\" menu\n
     · Fix: Update distance info on Google Maps while moving\n
     · Fix: Internal database cleanup improvements\n
-    · Fix: Removed no longer used menu entry "Cache list" - "Show on map" - "Mapsforge Beta"\n
+    · Fix: Removed no longer used menu entry \"Cache list\" - \"Show on map\" - \"Mapsforge Beta\"\n
     \n
     \n
   </string>
