proximity notification messages as Android textual notifications
contents of notifications:
- for caches: GC Code and cache name
- for waypoints: Waypoint name and type
- text created by TextFactory, including bearing (if available)

notifications can be configured to be tone only, text only, or both

--- a/main/res/values/arrays.xml
+++ b/main/res/values/arrays.xml
@@ -12,4 +12,15 @@
         <item>@string/pref_value_green</item>
     </string-array>
 
+    <string-array name="proximity_notification_types">
+        <item>@string/pn_tone_only</item>
+        <item>@string/pn_text_only</item>
+        <item>@string/pn_tone_and_text</item>
+    </string-array>
+
+    <string-array name="proximity_notification_values">
+        <item>@string/pref_value_pn_tone_only</item>
+        <item>@string/pref_value_pn_text_only</item>
+        <item>@string/pref_value_pn_tone_and_text</item>
+    </string-array>
 </resources>
