add option to disable controls for manual map rotation on GMv2 (fix #7986)

--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -5,6 +5,7 @@
     <b>Next feature release:</b>\n
     · New: Ability to create user defined caches\n
     · New: Add support for geocheckers of geocache-planer.de and geotjek.dk\n
+    · New: Option to disable Google Maps controls for manual screen rotation\n
     · Change: Use waypoints of a user defined cache in \"Go to\" menu\n
     · Change: Link from offline map \"More info\" page to the new offline map tutorial\n
     · Fix: Support for geochecker gc-apps.com\n
