--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -8,6 +8,7 @@
     · New: Option to disable Google Maps controls for manual screen rotation\n
     · Change: Use waypoints of a user defined cache in \"Go to\" menu\n
     · Change: Link from offline map \"More info\" page to the new offline map tutorial\n
+    · Change: Updated compatibility libraries from support libraries to AndroidX\n
     · Fix: Support for geochecker gc-apps.com\n
     · Fix: Internal database cleanup improvements\n
     · Fix: Removed no longer used menu entry \"Cache list\" - \"Show on map\" - \"Mapsforge Beta\"\n
