Update changelog on release branch

--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -2,6 +2,10 @@
 <resources>
   <!-- changelog for the release branch -->
   <string name="changelog_release" translatable="false">\n
+    <b>Next bugfix release:</b>\n
+	· Fix: Avoid app freeze when mapping large lists on OSM maps\n
+	\n
+	\n 
     <b>2019.11.28:</b>\n
     · Fix: Update distance info on Google Maps while moving\n
     \n
