--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -6,6 +6,7 @@
     · New: Ability to create user defined caches\n
     · New: Proximity notification messages as Android system notifications\n
     · New: Add support for geocheckers of geocache-planer.de and geotjek.dk\n
+    · New: Auto rotate for Google Maps\n
     · New: Option to disable Google Maps controls for manual screen rotation\n
     · Change: Use waypoints of a user defined cache in \"Go to\" menu\n
     · Change: Link from offline map \"More info\" page to the new offline map tutorial\n
