lint resolution: fix a couple of layout attributes

--- a/main/res/layout/about_contributors_page.xml
+++ b/main/res/layout/about_contributors_page.xml
@@ -16,7 +16,7 @@
             <View style="@style/separator_horizontal" />
             <TextView
                 style="@style/separator_horizontal_headline"
-                android:text="carnero" />
+                android:text="@string/contributors_carnero" />
         </RelativeLayout>
 
         <TextView
