--- a/main/res/layout/coordinates_calculate.xml
+++ b/main/res/layout/coordinates_calculate.xml
@@ -18,6 +18,7 @@
         android:id="@+id/PlainFormat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:importantForAutofill="noExcludeDescendants"
         android:orientation="vertical">
         <EditText
             android:id="@+id/PlainLat"
