--- a/main/res/layout/authorization_token_activity.xml
+++ b/main/res/layout/authorization_token_activity.xml
@@ -44,6 +44,7 @@
             android:inputType="textPersonName"
             style="@style/edittext_full"
             android:hint="@string/init_authorization_credential_username"
+            android:autofillHints=".AUTOFILL_HINT_USERNAME"
             android:layout_margin="7dip" />
 
         <EditText
@@ -51,6 +52,7 @@
             android:inputType="textPassword"
             android:hint="@string/init_authorization_credential_password"
             style="@style/edittext_full"
+            android:autofillHints=".AUTOFILL_HINT_PASSWORD"
             android:layout_margin="7dip" />
 
         <Button
