--- a/main/res/layout/coordinates_equations.xml
+++ b/main/res/layout/coordinates_equations.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:id="@+id/VariablesPanel"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
 
     android:fillViewport="true"
