--- a/main/res/layout/coordinates_input.xml
+++ b/main/res/layout/coordinates_input.xml
@@ -2,7 +2,8 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:importantForAutofill="noExcludeDescendants">
 
     <Spinner
         android:id="@+id/spinnerCoordinateFormats"
@@ -33,6 +34,7 @@
                 android:layout_marginRight="2dp"
                 android:gravity="right"
                 android:inputType="number"
+                android:hint="@string/cc_hint_degrees"
                 android:selectAllOnFocus="true" />
 
             <TextView
@@ -49,6 +51,7 @@
                 android:layout_marginRight="2dp"
                 android:gravity="right"
                 android:inputType="number"
+                android:hint="@string/cc_hint_minutes"
                 android:selectAllOnFocus="true" />
 
             <TextView
@@ -65,6 +68,7 @@
                 android:layout_marginRight="2dp"
                 android:gravity="right"
                 android:inputType="number"
+                android:hint="@string/cc_hint_seconds"
                 android:selectAllOnFocus="true" />
 
             <TextView
@@ -80,6 +84,7 @@
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
                 android:inputType="number"
+                android:hint="@string/cc_hint_secfractions"
                 android:selectAllOnFocus="true" />
             <TextView
                 android:id="@+id/LatPaddingRight"
@@ -102,6 +107,7 @@
                 android:layout_marginRight="2dp"
                 android:gravity="right"
                 android:inputType="number"
+                android:hint="@string/cc_hint_degrees"
                 android:selectAllOnFocus="true" />
 
             <TextView
@@ -118,6 +124,7 @@
                 android:layout_marginRight="2dp"
                 android:gravity="right"
                 android:inputType="number"
+                android:hint="@string/cc_hint_minutes"
                 android:selectAllOnFocus="true" />
 
             <TextView
@@ -134,6 +141,7 @@
                 android:layout_marginRight="2dp"
                 android:gravity="right"
                 android:inputType="number"
+                android:hint="@string/cc_hint_seconds"
                 android:selectAllOnFocus="true" />
 
             <TextView
@@ -149,6 +157,7 @@
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
                 android:inputType="number"
+                android:hint="@string/cc_hint_secfractions"
                 android:selectAllOnFocus="true" />
         </TableRow>
     </TableLayout>
