--- a/main/res/layout/fragment_edit_note.xml
+++ b/main/res/layout/fragment_edit_note.xml
@@ -15,6 +15,8 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:inputType="textMultiLine"
-        android:lines="8" />
+        android:lines="8"
+        android:hint="@string/waypoint_note"
+        android:importantForAutofill="no"/>
 
 </LinearLayout>
