--- a/main/res/layout/map_mapsforge_v6.xml
+++ b/main/res/layout/map_mapsforge_v6.xml
@@ -17,6 +17,7 @@
             android:layout_height="fill_parent"
             class="cgeo.geocaching.maps.mapsforge.v6.MfMapView"
             android:clickable="true"
+            android:focusable="true"
             android:enabled="true"
             android:keepScreenOn="true" />
 
