--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -35,33 +35,37 @@
     <!-- contributors -->
     <string name="contributors_carnero" translatable="false">carnero</string>
 
+    <!-- recent contributors, meaning: this year + last year -->
+    <!-- one line per contributor, format is: <name>|<link>|<contribution identifiers>| -->
+    <!-- (contribution identifiers are: c=code, d=documentation, g=graphics, p=project leader, s=support, t=testing) -->
     <string name="contributors_recent" translatable="false">
+    avogadogc|||
     Bananeweizen||c|
     bekuno||c|
-    bjdupuis||c|
-    ControlTheBit||c|
-    following5||c|
+    emividmark|||
+    following5|||
+    HolgerJeromin|||
     jonas-koeritz||c|
-    HolgerJeromin||c|
-    lazydays79||c|
     Lineflyer|https://www.geocaching.com/email/?guid=d11a3e3d-7db0-4d43-87f2-7893238844a6|tsd|
-    Mathieu Alorent||c|
-    Matze2||c|
     moving-bits|http://github.com/moving-bits|cg|
-    msperkowski||d|
+    msperkowski|||
     mucek4||cp|
     okainov||c|
     Peter Storch||c|
     Rainer S.||c|
-    SammysHP|http://www.sammyshp.de/|c|
-    Samuel Tardieu|http://www.rfc1149.net/sam.html|c|
+    SammysHP|http://www.sammyshp.de/||
+    Samuel Tardieu|http://www.rfc1149.net/sam.html||
     UniQP||c|
     </string>
 
+    <!-- other contributors, meaning: before last year -->
+    <!-- same format as contributors_recent string -->
     <string name="contributors_other" translatable="false">
     Arne Schwabe||c|
+    bjdupuis||c|
     blafoo||c|
     campbeb||c|
+    ControlTheBit||c|
     Eisbehr||c|
     Filipe C.||c|
     Iiro Jäppinen||g|
@@ -69,7 +73,10 @@
     JoWi24|http://joachim-wilke.de/|c|
     Karsten Priegnitz|http://github.com/koem|cg|
     KiwiStone|https://www.geocaching.com/profile/?guid=231070d8-b6f4-4d14-8d5a-b8bdcb19b78e|c|
+    lazydays79||c|
     marco-dev||c|
+    Mathieu Alorent||c|
+    Matze2||c|
     MichielK||c|
     ncorreia||c|
     Pavol Babinčák||c|
