Add AppShortcuts for nearby, stored and search.

--- a/main/res/xml/shortcuts.xml
+++ b/main/res/xml/shortcuts.xml
@@ -10,4 +10,39 @@
             android:targetPackage="cgeo.geocaching"
             android:targetClass="cgeo.geocaching.maps.MapActivity" />
     </shortcut>
+    <shortcut
+        android:shortcutId="nearby"
+        android:enabled="true"
+        android:icon="@drawable/main_nearby"
+        android:shortcutShortLabel="@string/caches_nearby_button">
+        <intent
+            android:action="android.intent.action.VIEW"
+            android:targetPackage="cgeo.geocaching"
+            android:targetClass="cgeo.geocaching.CacheListActivity">
+            <extra android:name="cgeo.geocaching.intent.extra.list_type" android:value="NEAREST" />
+        </intent>
+    </shortcut>
+    <shortcut
+        android:shortcutId="stored"
+        android:enabled="true"
+        android:icon="@drawable/main_stored"
+        android:shortcutShortLabel="@string/stored_caches_button">
+        <intent
+            android:action="android.intent.action.VIEW"
+            android:targetPackage="cgeo.geocaching"
+            android:targetClass="cgeo.geocaching.CacheListActivity">
+            <extra android:name="cgeo.geocaching.intent.extra.list_type" android:value="OFFLINE" />
+        </intent>
+    </shortcut>
+    <shortcut
+        android:shortcutId="search"
+        android:enabled="true"
+        android:icon="@drawable/main_search"
+        android:shortcutShortLabel="@string/advanced_search_button">
+        <intent
+            android:action="android.intent.action.VIEW"
+            android:targetPackage="cgeo.geocaching"
+            android:targetClass="cgeo.geocaching.SearchActivity">
+        </intent>
+    </shortcut>
 </shortcuts>
