--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -5,12 +5,12 @@
     <b>Beta version:</b>\n
     · New: Auto rotate for Google Maps\n
     · New: Ability to create user defined caches\n
-    · New: Use waypoints of a user defined cache in \"Go to\" menu\n
     · New: Proximity notification messages as Android system notifications\n
     · New: Add support for geocheckers of geocache-planer.de and geotjek.dk\n
     · New: Option to disable Google Maps controls for manual screen rotation\n
     · New: Support cache type \"Locationless (Reverse) Geocache\" (no logging support yet)\n
     · New: Show current elevation in compass\n
+    · Change: Use waypoints of a user defined cache in \"Go to\" menu (instead of the old \"Go to\" history)\n
     · Change: Link from offline map \"More info\" page to the new offline map tutorial\n
     · Change: Updated compatibility libraries from support libraries to AndroidX\n
     · Fix: Accidental outzoom to world map when opening Google Maps cache map\n
