add 'hide archived caches' option to map settings (fix #7848)

--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -80,6 +80,13 @@
                 app:showAsAction="ifRoom|withText">
             </item>
             <item
+                android:id="@+id/menu_archived_mode"
+                android:checkable="true"
+                android:icon="@drawable/ic_menu_archived"
+                android:title="@string/map_archived_hide"
+                app:showAsAction="ifRoom|withText">
+            </item>
+            <item
                 android:id="@+id/menu_direction_line"
                 android:checkable="true"
                 android:icon="@drawable/ic_menu_goto"
