--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -67,6 +67,7 @@
     <string translatable="false" name="pref_opendetailslastpage">opendetailslastpage</string>
     <string translatable="false" name="pref_excludemine">excludemine</string>
     <string translatable="false" name="pref_excludedisabled">excludedisabled</string>
+    <string translatable="false" name="pref_excludearchived">excludearchived</string>
     <string translatable="false" name="pref_showCircles">showCircles</string>
     <string translatable="false" name="pref_plainLogs">plainLogs</string>
     <string translatable="false" name="pref_signature">signature</string>
