extend map settings to hide archived caches and/or certain waypoints
* add 'hide archived caches' option to map settings (fix #7848)
* add map option to hide certain waypoint types (fix #5118)
* move hide options to separate submenu
* make new hide settings available in global settings menu
* separate impacts from isExcludeDisabled and isExcludeArchived

--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -66,20 +66,6 @@
         app:showAsAction="ifRoom|withText">
         <menu>
             <item
-                android:id="@+id/menu_mycaches_mode"
-                android:checkable="true"
-                android:icon="@android:drawable/ic_menu_myplaces"
-                android:title="@string/map_mycaches_hide"
-                app:showAsAction="ifRoom|withText">
-            </item>
-            <item
-                android:id="@+id/menu_disabled_mode"
-                android:checkable="true"
-                android:icon="@drawable/ic_menu_disabled"
-                android:title="@string/map_disabled_hide"
-                app:showAsAction="ifRoom|withText">
-            </item>
-            <item
                 android:id="@+id/menu_direction_line"
                 android:checkable="true"
                 android:icon="@drawable/ic_menu_goto"
@@ -116,6 +102,55 @@
                 app:showAsAction="ifRoom|withText">
             </item>
 
+        </menu>
+    </item>
+    <item
+        android:id="@+id/submenu_hide"
+        android:showAsAction="ifRoom|withText"
+        android:title="@string/map_hide" >
+        <menu>
+            <item
+                android:id="@+id/menu_mycaches_mode"
+                android:checkable="true"
+                android:icon="@android:drawable/ic_menu_myplaces"
+                android:title="@string/map_mycaches_hide"
+                app:showAsAction="ifRoom|withText">
+            </item>
+            <item
+                android:id="@+id/menu_disabled_mode"
+                android:checkable="true"
+                android:icon="@drawable/ic_menu_disabled"
+                android:title="@string/map_disabled_hide"
+                app:showAsAction="ifRoom|withText">
+            </item>
+            <item
+                android:id="@+id/menu_archived_mode"
+                android:checkable="true"
+                android:icon="@drawable/ic_menu_archived"
+                android:title="@string/map_archived_hide"
+                app:showAsAction="ifRoom|withText">
+            </item>
+            <item
+                android:id="@+id/menu_hidewp_original"
+                android:checkable="true"
+                android:icon="@drawable/ic_menu_waypoint"
+                android:title="@string/map_hidewp_original"
+                app:showAsAction="ifRoom|withText">
+            </item>
+            <item
+                android:id="@+id/menu_hidewp_parking"
+                android:checkable="true"
+                android:icon="@drawable/ic_menu_parking"
+                android:title="@string/map_hidewp_parking"
+                app:showAsAction="ifRoom|withText">
+            </item>
+            <item
+                android:id="@+id/menu_hidewp_visited"
+                android:checkable="true"
+                android:icon="@drawable/ic_menu_visited"
+                android:title="@string/map_hidewp_visited"
+                app:showAsAction="ifRoom|withText">
+            </item>
         </menu>
     </item>
     <item
