--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -2,5 +2,10 @@
 <resources>
   <!-- changelog for the master branch -->
   <string name="changelog_master" translatable="false">
+    <b>Next feature release:</b>\n
+    · New: Added option to hide archived caches\n
+    · New: Added map options to hide certain waypoint types\n
+    · Change: Moved hide options to separate map submenu\n
+    · Change: Separated impacts from \"hide disabled\" and \"hide archived\" options\n
   </string>
 </resources>
