add button 'add current location' to waypoint list (fix #8114)

--- a/main/res/layout/cachedetail_waypoints_header.xml
+++ b/main/res/layout/cachedetail_waypoints_header.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/add_waypoint"
-    style="@style/button_full"
-    android:layout_margin="10dip"
-    android:clickable="true"
-    android:focusable="true"
-    android:padding="10dip"
-    android:text="@string/cache_waypoints_add"
-    tools:context=".CacheDetailActivity$WaypointsViewCreator" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_margin="0dp"
+    android:padding="0dp">
+    <Button
+        android:id="@+id/add_waypoint"
+        style="@style/button_full"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="@string/cache_waypoints_add"
+        tools:context=".CacheDetailActivity$WaypointsViewCreator" />
+    <Button
+        android:id="@+id/add_waypoint_currentlocation"
+        style="@style/button_full"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="@string/cache_waypoints_add_currentLocation" />
+</LinearLayout>
