--- a/main/res/layout/fragment_edit_note.xml
+++ b/main/res/layout/fragment_edit_note.xml
@@ -19,4 +19,22 @@
         android:hint="@string/waypoint_note"
         android:importantForAutofill="no"/>
 
+    <View style="@style/action_bar_separator"
+        android:visibility="gone"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/preventWaypointsFromNote"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/textPreventWaypointsFromNote"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cache_personal_note_preventWaypointsExtraction"/>
+    </LinearLayout>
+
 </LinearLayout>
