--- a/main/res/layout/map_mapsforge_v6.xml
+++ b/main/res/layout/map_mapsforge_v6.xml
@@ -74,6 +74,14 @@
             android:layout_width="wrap_content"
             style="@style/map_distanceinfo" />
 
+        <TextView
+            android:id="@+id/routeDistance"
+            android:layout_marginTop="0dp"
+            android:layout_below="@id/distance2"
+            android:layout_alignParentRight="true"
+            android:layout_width="100dp"
+            style="@style/map_distanceinfo" />
+
         <include layout="@layout/map_progressbar" />
 
     </RelativeLayout>
