--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -587,6 +587,11 @@
                 android:key="@string/pref_showwaypointsthreshold"
                 android:layout="@layout/preference_seekbar" />
             <CheckBoxPreference
+                android:defaultValue="false"
+                android:key="@string/pref_zoomincludingwaypoints"
+                android:summary="@string/init_zoomincludingwaypoints_description"
+                android:title="@string/init_zoomincludingwaypoints" />
+            <CheckBoxPreference
                 android:defaultValue="true"
                 android:key="@string/pref_map_direction"
                 android:summary="@string/settings_summary_map_direction"
