--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -59,6 +59,7 @@
     <string translatable="false" name="pref_webDeviceName">webDeviceName</string>
     <string translatable="false" name="pref_nativeUa">nativeUa</string>
     <string translatable="false" name="pref_skin">skin</string>
+    <string translatable="false" name="pref_transparentBackground">transparentBackground</string>
     <string translatable="false" name="pref_showaddress">showaddress</string>
     <string translatable="false" name="pref_useenglish">useenglish</string>
     <string translatable="false" name="pref_units_imperial">units</string>
