add option to clear individual route

--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -207,5 +207,9 @@
         android:id="@+id/menu_clear_trailhistory"
         android:title="@string/map_clear_trailhistory">
     </item>
+    <item
+        android:id="@+id/menu_clear_individual_route"
+        android:title="@string/map_clear_individual_route">
+    </item>
 
 </menu>
