--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -4,6 +4,7 @@
   <string name="changelog_release" translatable="false">\n
     <b>Beta version:</b>\n
     · Fix: Submitting logs for caches not possible on geocaching.com\n
+    · Fix: Blue arrow on map pointing to wrong position on some devices\n
     \n
     \n
     <b>2020.03.07:</b>\n
