--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -9,6 +9,7 @@
     · New: Show (unsaved) caches on corrected coordinates on live map if applicable\n
     · New: Create individual routes (by long pressing on icons in map)\n
     · Fix: Crash after "Remove all" in cache list\n
+    · Fix: Crash after rapid movements on OSM map\n
     · Change: Moved hide options to separate map submenu\n
     · Change: Separated impacts from \"hide disabled\" and \"hide archived\" options\n
     · Change: Switch off indoor mode for Google Maps in satellite mode\n
