Ease onboarding for offline OSM map usage - detect file type of of local files - copy map file to c:geo map storage - set copied map as current map - add preference link to download v3 OSM files

--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -180,4 +180,7 @@
     <!-- WhereYouGo helper - must be the same values as in WhereYouGo -->
     <string translatable="false" name="cgeo_queryMapFile_resultParam">mapfile</string>
     <string translatable="false" name="cgeo_queryMapFile_actionParam">forceAndFeedback</string>
+
+    <!-- map server urls -->
+    <string translatable="false" name="mapserver_osm_v3">https://ftp-stud.hs-esslingen.de/pub/Mirrors/download.mapsforge.org/maps/v3/</string>
 </resources>
