--- a/main/res/values/attrs.xml
+++ b/main/res/values/attrs.xml
@@ -37,7 +37,7 @@
     <attr name="settings_sdcard" format="integer" />
     <attr name="settings_backup" format="integer" />
     <attr name="settings_info_icon" format="integer" />
-    
+    <attr name="settings_map_icon" format="integer" />
 
     <!-- attributes for custom made preferences -->
     <attr name="text" format="string" />
