--- a/main/res/values/themes.xml
+++ b/main/res/values/themes.xml
@@ -196,6 +196,7 @@
         <item name="settings_sdcard">@drawable/settings_sdcard_white</item>
         <item name="settings_backup">@drawable/settings_backup_white</item>
         <item name="settings_info_icon">@drawable/settings_info_icon_white</item>
+        <item name="settings_map_icon">@drawable/settings_map_white</item>
     </style>
 
     <style name="settings.light" parent="@android:style/Theme.DeviceDefault.Light.DarkActionBar">
@@ -209,6 +210,7 @@
         <item name="settings_sdcard">@drawable/settings_sdcard_black</item>
         <item name="settings_backup">@drawable/settings_backup_black</item>
         <item name="settings_info_icon">@drawable/settings_info_icon_black</item>
+        <item name="settings_map_icon">@drawable/settings_map_white</item>
     </style>
 
     <style name="Dialog_Alert" parent="@style/Theme.AppCompat.Dialog.Alert">
